tests/idris2/perror002/expected
1/1: Building PError (PError.idr)
Error: Bracket is not properly closed.

PError.idr:5:23--5:24
   |
 5 | bar x = let y = 42 in (y + x
   |                       ^

